# pricetracker-py

./: .coveragerc  .gitignore  README.md  pricetracker.service  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py
pricetracker/: app.py  config.py  main.py  models.py  models_orm.py  pushover.py  task.py  utils.py  webdriver.py
pricetracker/api/: basic_crud.py  page.py  price.py  user.py  utils.py  website_config.py
pricetracker/assets/: init.js
tests/: conftest.py  test_page.py  test_price.py  test_task.py  test_user.py  test_utils.py  test_webdriver.py  test_website_config.py
