[tool.poetry]
name = "pricetracker-py"
version = "0.1.0"
description = "crawl prices from websites"
authors = ["Hong Xia <hongze.x@gmail.com>"]
license = "GNU"
readme = "README.md"
packages = [{include = "pricetracker"}]
repository = "https://github.com/xiahongze/pricetracker-py"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
sqlalchemy = "^2.0.7"
fastapi = "^0.95.0"
selenium = "^4.8.2"
pydantic = "^1.10.6"
pyyaml = "^6.0"
fake-useragent = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
httpx = "^0.23.3"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.coverage.run]
source = ['pricetracker']
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--cov --cov-report html --cov-fail-under=70"
testpaths = [
    "tests",
]

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"